# MedFlo-IT9866-GW202601-2491

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  build_gw_2491.bat  build_gw_2491_v2.bat  build_gw_test.bat  copy_rom.ps1  global_func.cmake
openrtos/boot/: CMakeLists.txt  init.c
openrtos/boot/fa626/: SBST.s  atan.s  basic_op2.s  init.cmake  init.scr.in  mats_algo.s
openrtos/malloc/: CMakeLists.txt  mallocr.c
openrtos/openrtos/: CMakeLists.txt  heap_3.c  heap_4.c  tasks.c
openrtos/openrtos/fa626/: port.c  portISR.c
openrtos/openrtos/riscv/: freertos_risc_v_chip_specific_extensions.h  freertos_tick_config.c  port.c  portasm.S  trap.c
project/GW202601_LVGL_v2/: CMakeLists.txt  Kconfig  backtrace.cmd  config.cmake  cpptest.cmd  exec.cmd  gdb.cmd  insight.cmd  jp2-noinit.cmd  jp2.cmd  libcodesize.cmd  main.c  main_openrtos.c  run.cmd  vscode.cmd
project/bootloader/: CMakeLists.txt  Kconfig  Kconfig.win32  boot.c  bootloader.h  check_crc.c  exec.cmd  gdb.cmd  insight.cmd  jp2-noinit.cmd  jp2.cmd  libcodesize.cmd  logo.c  main.c  main_openrtos.c  main_skip_upgrade_check.c  main_upgrade_api.c  main_upgrade_api.h  main_upgrade_check.c  recovery.c  run.cmd  uart_upgrade.c  vscode.cmd
project/gw_lvgl_test/: CMakeLists.txt  anim_frame_0.c  anim_frame_1.c  anim_frame_2.c  anim_frame_3.c  anim_frame_4.c  anim_frames.c  anim_frames.h  ble_init.c  ble_init.h  config.cmake  convert_frames.py  gen_frames.py  img_bg_480.c  img_bg_480.h  logo_nmgw.c  logo_nmgw.h  main.c  main_openrtos.c  mqtt_app.c  mqtt_app.h  ui_screen.c  ui_screen.h  wifi_app.c  wifi_app.h
project/lv_demos/: CMakeLists.txt  Kconfig  Kconfig.win32  main_openrtos.c
sdk/arm_lite_dev/can_bus_lite/: CMakeLists.txt  clock.c  main.c
sdk/arm_lite_dev/can_bus_lite/can_bus_lite/: can_armlite_api.c  can_hw_armlite.c
sdk/arm_lite_dev/hudBgFast/: CMakeLists.txt  main.c
sdk/codec/flacdecode/: CMakeLists.txt  OSS.yaml  bitmath.c  bitreader.c  bitwriter.c  coder.h  config.h  cpu.c  crc.c  fixed.c  fixed_intrin_sse2.c  fixed_intrin_ssse3.c  float.c  format.c  lpc.c  lpc_intrin_avx2.c  lpc_intrin_fma.c  lpc_intrin_neon.c  lpc_intrin_sse2.c  lpc_intrin_sse41.c  lpc_intrin_vsx.c  main.c  md5.c  memory.c  my_alloc.c  ogg_decoder_aspect.c  ogg_encoder_aspect.c  ogg_helper.c  ogg_mapping.c  stream_decoder.c  stream_decoder.h
sdk/codec/flacdecode/FLAC/: assert.h  callback.h  format.h
sdk/codec/flacdecode/share/: alloc.h  endswap.h
sdk/codec/mp3decode/: CMakeLists.txt  OSS.yaml  bitstream.c  coder.h  config.h  dct32.c  dct32.h  fft-internal.h  get_bits.h  main.c  mp3decode.h  mpegaudio_tablegen.h  mpegaudio_tablegen2.h  mpegaudiodec.c  mpegaudiodecheader.c  mpegaudiodecheader.h  mpegaudiodsp.c  mpegaudiodsp.h  mpegaudiodsp_template.c  plugin.h  put_bits.h
sdk/codec/mp3decode/libavutil/: audioconvert.h  avassert.h  avutil.h  common.h  error.c  error.h  internal.h  intmath.h  mathematics.c  mathematics.h  mem.c  samplefmt.h  timer.h
sdk/codec/vorbisdecode/: CMakeLists.txt  OSS.yaml  framing.c  main.c  memlib.c  memlib.h  mm.c  mm.h
sdk/codec/vorbisdecode/ogg/: os_types.h
sdk/driver/audio/: CMakeLists.txt  ite_audio.c  ite_audio_null.c  ite_risc_ts_demux.c  main_processor_message_queue.c
sdk/driver/bluetooth/: CMakeLists.txt
sdk/driver/bluetooth/ampak/: CMakeLists.txt
sdk/driver/bluetooth/brt/: CMakeLists.txt
sdk/driver/bluetooth/mtk/: CMakeLists.txt
sdk/driver/bluetooth/rtl/: CMakeLists.txt
sdk/driver/hdmirx/: CMakeLists.txt  mmp_hdmirx.c
sdk/driver/hdmirx/it66021/: IO.c  Remote.c  Utility.c  it6602_interface.c  it660x.c
sdk/driver/hdmirx/it6802/: IO.c  Utility.c  it680x.c  it680x_interface.c
sdk/driver/hdmitx/: CMakeLists.txt  mmp_hdmitx.c
sdk/driver/hdmitx/IT66121/: hdmitx_drv.c  hdmitx_sys.c
sdk/driver/ith/: CMakeLists.txt  ith_card.c  ith_cfg.h  ith_chipid.c  ith_clock.c  ith_cmdq.c  ith_dcps.c  ith_dma_axi.c  ith_dpu.c  ith_dpu2.c  ith_gpio.c  ith_gpio_handler.c  ith_host.c  ith_interrupt.c  ith_interrupt_handler.c  ith_ir.c  ith_isp.c  ith_lcd.c  ith_lcd.h  ith_lcd_interface.c  ith_lcd_interface.h  ith_list.c  ith_membist.c  ith_nand.c  ith_openrtos.c  ith_printf.c  ith_pwm.c  ith_rtc.c  ith_timer.c  ith_uart.c  ith_usb.c  ith_utility.c  ith_video.c  ith_vmem.c  ith_vmem_m2d.c  ith_vregs.h  ith_win32.c  ith_win32_spi.c  ith_xd.c
sdk/driver/ith/test/: CMakeLists.txt  fake_ithprint.c  test_ith_list.cc  test_ith_memset.cc  test_ith_u32tob.cc
sdk/driver/itp/: CMakeLists.txt  itp_alt_cpu.c  itp_armlite_dev.c  itp_backlight.c  itp_backtrace.c  itp_base.c  itp_card.c  itp_cfg.h  itp_codec.c  itp_ctrlboard_codec.c  itp_decompress.c  itp_demod.c  itp_demod_isdb.c  itp_demod_thread.c  itp_demod_thread.h  itp_dlfcn_openrtos.c  itp_dpu.c  itp_dpu2.c  itp_drive_openrtos.c  itp_drive_win32.c  itp_ecm.c  itp_error.c  itp_ethernet.c  itp_fat.c  itp_filex.c  itp_i2c.c  itp_init_openrtos.c  itp_init_win32.c  itp_ir.c  itp_keypad.c  itp_lcdconsole.c  itp_lfs.c  itp_logdisk.c  itp_membist.c  itp_nand.c  itp_nor.c  itp_nor_aes.c  itp_pipe.c  itp_pmic.c  itp_posix_openrtos.c  (+48 more)
sdk/driver/itp/dac/: gc7.2.inc  itp_dac_alc5616.c  itp_dac_alc5616_adj.c  itp_dac_alc5628.c  itp_dac_ite970.c  itp_dac_null.c  itp_dac_wm8960.c  (+1 more)
sdk/driver/itv/: CMakeLists.txt
sdk/driver/nand/: CMakeLists.txt  cache.c  cache.h  ite_nand.c  nf_dma.c  nf_lb4k_hwecc.c  nf_lb8k_hwecc.c  nf_lb_hwecc.c  nf_spi_nand.c  nfdrv.c  power_down_handle.c  spinfdrv.c
sdk/driver/non_gpl_wifi_aic8800/: CMakeLists.txt  userconfig.c  wifi.c  wifi.h
sdk/driver/non_gpl_wifi_mhd/: CMakeLists.txt
sdk/driver/sensor/: CMakeLists.txt  DS90UB926Q.c  MAX9276.c  NT99141.c  PR2000K.c  RN6752.c  RN6854M.c  TP2825B.c  TP2860.c  TP9950.c  TVP5150AM1.c  adv7180.c  adv7181c.c  adv7280a.c  mmp_sensor.c  userdefine.c
sdk/driver/uart/: CMakeLists.txt  uart.c  uart_dma.c  uart_fifo.c  uart_intr.c
sdk/driver/wifi_mtk/: CMakeLists.txt
sdk/driver/xd/: CMakeLists.txt
sdk/share/audio_mgr/: CMakeLists.txt  audio_mgr.c  audio_mgr.h
sdk/share/bluedroid/: CMakeLists.txt
sdk/share/bluetooth_bta/: BTA_ReleaseNote.md  CMakeLists.txt
(+3020 files in other folders)
