if ((${CMAKE_PROJECT_NAME} STREQUAL sdk_standard_ngpl)
 OR (${CMAKE_PROJECT_NAME} STREQUAL sdk_standard_ngpl_intl))
    set(CFG_RTL8821BLE y)
    set(CFG_GPIO_BT_REG_ON 27)
endif()

if (DEFINED CFG_RTL8723BLE OR DEFINED CFG_RTL8733BLE OR DEFINED CFG_RTL8821BLE)
	add_subdirectory(rtl)
elseif(DEFINED CFG_AP6212BLE OR DEFINED CFG_AP6256BLE OR DEFINED CFG_AP6236BLE OR DEFINED CFG_AP6203BLE)
	add_subdirectory(ampak)
elseif(DEFINED CFG_MT7921BLE)
	add_subdirectory(mtk)
elseif(DEFINED CFG_BARROT_MODULE_8821CS OR DEFINED CFG_BARROT_MODULE_BR8051)
	add_subdirectory(brt)
endif()